# rules-py-issue

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  foo.py  foo_test.py  requirements.txt
